<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <ImageView

       android:paddingTop="15dp"
       android:id="@+id/iv"
       android:layout_width="150dp"
       android:layout_height="115dp"
       android:src="@drawable/qapps" />

   <TextView

       android:layout_below="@+id/iv"
       android:layout_centerHorizontal="true"
       android:id="@+id/tv1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/app"
       android:textSize="25dp"
       android:paddingTop="15dp"
       android:paddingLeft="5dp"
       android:textColor="@color/tv"/>

   <TextView

       android:layout_below="@+id/tv1"
       android:layout_centerHorizontal="true"
       android:id="@+id/tv4"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/aboutPackage"
       android:textSize="25dp"
       android:paddingTop="15dp"
       android:paddingLeft="5dp"
       android:textColor="@color/tv"/>

   <TextView

       android:paddingTop="15dp"
       android:layout_centerHorizontal="true"
       android:id="@+id/tv2"
       android:layout_below="@+id/tv4"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/dev"
       android:textSize="25dp"
       android:paddingLeft="5dp"
       android:textColor="@color/tv"/>

   <TextView

       android:paddingTop="15dp"
       android:layout_below="@+id/tv2"
       android:layout_centerHorizontal="true"
       android:id="@+id/tv3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/version"
       android:textSize="25dp"
       android:paddingBottom="10dp"
       android:paddingLeft="5dp"
       android:textColor="@color/tv"/>

</RelativeLayout>